# pizzaslice

./: .gitignore  CMakeLists.txt  config.json
CMakeModules/: FindMariaDB.cmake
docs/: design.md
src/: CMakeLists.txt  CommandLinePizzaSlice.cpp
src/lib/: CMakeLists.txt  CommandLine.h
src/lib/Database/: CMakeLists.txt  Connection.cpp  Connection.h  MySQLConnection.cpp  MySQLConnection.h  Structs.h
src/lib/Utils/: CMakeLists.txt  UtilityFunctions.cpp  UtilityFunctions.h
src/resources/: DatabaseCommands.sql  SQL.xml
test/: CMakeLists.txt  MySQLConnectionQueryTestApp.cpp
